# OmniChip-8

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  OmniChip-8.sln  OmniChip-8.vcxproj  OmniChip-8.vcxproj.filters  OmniChip8Testing.vcxproj  OmniChip8Testing.vcxproj.filters  README  README.md  make.py  packages.config  shell.html
.github/actions/publish-test-report/: action.yml
.github/actions/upload-test-report/: action.yml
.github/workflows/: cmake-ctest.yml
asm/: sim6502_time.s
games/: oc8  oc8.c8  omnichip8  omnichip8.c8
src/: chip8.c  chip8.h  cpu.c  cpu.h  io.h  io_c64.c  io_curses.c  io_gb.c  io_sdl.c  io_sim6502.c  io_template.c  io_ti83.c  loader.h  main.c  opcode_funcs.c  opcode_funcs.h  util.c  util.h
src/tests/: chip8_test.cc  testing_roms.h
